[Media Controls] Keep events in node for panel in audio controls

This CL fixes an issue where we don't keep events in node for the
audio panel.

Bug: 884108
Change-Id: I039a606005b9be109c36f35a7bf33f4a77f951db
Reviewed-on: https://chromium-review.googlesource.com/1239006
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593407}
Former-commit-id: 1c7143323b76e2b7f0183cc58c4edd5b6ef23253