third_party/blink/renderer/modules/media_controls/elements/media_control_panel_element.cc
@@ -181,7 +181,8 @@ void MediaControlPanelElement::DefaultEventHandler(Event& event) {
 }
 
 bool MediaControlPanelElement::KeepEventInNode(const Event& event) const {
-  return !MediaControlsImpl::IsModern() &&
+  return (!MediaControlsImpl::IsModern() ||
+          GetMediaControls().ShouldShowAudioControls()) &&
          MediaControlElementsHelper::IsUserInteractionEvent(event);
 }
 
